# Installer

./: CMakeLists.txt
assets/: dummy.txt
assets/icons/: mannicon.icns
assets/manifests/: App.manifest  MyApp.desktop.in  app.rc
packaging/: CMakeLists.txt
packaging/dmg/: AppDMGSetup.scpt
platform/darwin/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/windows/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/platform/darwin/: CMakeLists.txt  Info.plist.in
src/platform/linux/: CMakeLists.txt
src/platform/windows/: CMakeLists.txt
